--- a/css/styles.css
+++ b/css/styles.css
@@ -5,4 +5,13 @@ body {
 }
 .logo {
     font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+}
+.text-studio {
+    color: #2e2f42;
 }
