--- a/css/styles.css
+++ b/css/styles.css
@@ -29,18 +29,130 @@ text-decoration: none;
  }
  .nav-link {
      font-weight: 500;
-     /* Жирность шрифта */
-     line-height: 1.5;
-     /* Пространство между строками */
-     letter-spacing: 0.02em;
-     /* Расстояние между буквами */
-     color: #2e2f42;
-     /* Основной цвет текста */
      text-decoration: none;
+     line-height: 1.5;
+     color: #2e2f42;
+     letter-spacing: 0.02em;
+
  }
 
  .nav-link:hover,
  .nav-link:focus {
      color: #404bbf;
-     /* Цвет текста при наведении и фокусе */
+
+ } 
+ .address-block {
+    font-style: normal;
  }
+ .main-page {
+    background-color: #2e2f42;
+
+ }
+ .title {
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+ }
+ .title-button {
+    background-color: #4d5ae5;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+ }
+ .title-button:hover,
+ .title-button:focus {
+    background-color: #404bbf;
+ }
+ .title-features {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    color: #2e2f42;
+    letter-spacing: 0.02em;
+ }
+ .features-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+ }
+ .team {
+    background-color: #F4F4FD
+ }
+ .team-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    text-transform: capitalize;
+ }
+.team-container, .team-card {
+    background-color: #ffffff;
+ }
+
+.team-list-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+}
+.team-card-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #434455;
+}
+.portfolio {
+    background-color: #f4f4fd;
+}
+
+.port-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    text-transform: capitalize;
+}
+
+.portfolio-container {
+    background-color: #fff;
+}
+
+.port-title-list {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.port-text-list {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+.footer {
+    background-color: #2e2f42;
+}
+.footer-text {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+}
