--- a/css/styles.css
+++ b/css/styles.css
@@ -156,3 +156,14 @@ text-decoration: none;
     letter-spacing: 0.02em;
     color: #f4f4fd;
 }
+.white {
+    color: #f4f4fd;
+}
+.title-list-features {
+    font-weight: 500;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
